--- a/part2.tex
+++ b/part2.tex
@@ -1,5 +1,5 @@
 % Метод управления трафиком в гибридной программно-определяемой сети
-\section{Распрацоўка праграмнага забеспячэння для кіравання трафікам ў гібрыдных сетках SDN}
+\section{Аналіз пратаколаў маршрутызацыі і распрацоўка праграмнага забеспячэння для кіравання трафікам ў гібрыдных сетках SDN}
 
 ДЭЦЭНТРАЛІЗАВЫЯ/ЦЭНТРАЛІЗАВАНЫЯ АПІСАЦЬ
 ПАДВЕСЦІ ДА РАЗГЛЯДУ ТЫПАЎ АЛГАРЫТМАЎ
@@ -82,6 +82,51 @@
 маршрутызатара на шляху перадачы пакета, перагружанасць сеткі на ўсіх прамежкавых каналах сеткі і фізічная адлегласць, на якую неабходна перамясціць пакет. Так як тут мае месца ўплыў некалькіх важных зменных, затрымка з'яўляецца найбольш агульным і карысным паказчыкам.
 
 Паласа прапускання прыраўноўваецца да наяўнай магутнасці трафіку якога-небудзь канала. Пры іншых роўных паказчыках, канал Ethernet 10 Мбіт пераважны любой арэндаванай лініі з паласой прапускання 64 Кбіт/сек. Хоць паласа прапускання з'яўляецца ацэнкай максімальна дасягальнай прапускной здольнасці канала, маршруты, якія праходзяць праз каналы з большай паласой прапускання, не абавязкова будуць лепшымі за маршрутам, якія праходзяць праз менш хуткадзейныя каналы.
+
+\subsection{Аналіз пратаколаў маршрутызацыі ў канцэпцыі SDN сетак}
+
+Як згадвалася ў першым раздзеле дадзенай работы традыцыйныя пратаколы
+маршрутызацыі, такія як OSPF, RIP, BGP, EIGRP і іншыя, не былі прызначаныя
+для выкарыстання ў праграмна вызаначаных сетках.
+
+У дадзеным падраздзеле правядзем кароткі аналіз асноўных пратаколаў маршрутызацыі на магчымасць іх выкарыстоўвання  ў
+праграмна-вызначаных сетак.
+
+Дыстанцыйна-вектарны пратакол маршрутызацыі RIP --- адзін з самых простых пратаколаў маршрутызацыі, які можа выкарыстоўвацца ў невялікіх камп'ютарных сетках.
+У якасці метрыкі пратакол маршрутызацыі RIP выкарыстоўвае колькасць неабходных пераходаў паміж маршрутызатарамі для дасягнення пункту
+прызначэння. Колькасць пераходаў абмежаваная 15 маршрытазатарамі.
+Прастата пратакола маршрутызацыі RIP ў вызначэнні метрыкі і абмежаванне
+колькасці транзітных маршрутызатраўа
+з'яўляюцца галоўным фактарамі немэтазгоднасці выкарыстоўвання дадзенага
+пратакола маршрутызацыі ў SDN сетках, якія прадугледжваюць гібкую канфігурацыю вызначэння аптымальнага маршруту ў сетцы.
+
+Пратаколы маршрутызацыі стану канала, такія як IS-IS і OSPF, з'яўляюцца
+найбольш распаўсюджанымі ў традыцыйных сетках. Пратаколы маршрутызацыі
+стану канала прадастаўляюць багатыя магчымасці для канфігурацыі сеткі,
+хуткую збежнасць, падтрымку іерархіі сеткі, якая гарантуе адсутнасць
+петляў у сетцы.
+
+Апошняя ўласцівасць дасягаецца за кошт пабудовы усімі маршрутызатарамі сеткі адзінай базы даных сеткавых падключэнняў --- LSDB (Link State DataBase). Фарміраванне LSDB заснавана, у сваю чаргу, на фарміраванні суседскіх адносін паміж маршрутызатарамі. Фарміраванне і падтрыманне суседскіх адносін неабходна для магчымасці пабудовы поўнай тапалогіі сеткі (фарміравання LSDB). Фарміраванне суседскіх адносін адбываецца па-рознаму, у залежнасці ад тыпу сеткі, абодва пратаколы (OSPF, IS-IS) вылучаюць два асноўных тыпу сетак: шырокавяшчальныя (Ethernet), NBMA (Nonbroadcast
+Multiple Access, такія варыяцыі як пункт-пункт, пункт-мультыпункт).
+Бягучыя спецыфікацыі пратаколу OpenFlow, якія выкарыстоўваецца для пабудовы класічнай мадэлі SDN сетак, вызначаюць злучэння выключна як злучэння Ethernet, гэта значыць, што  з пункту гледжання пратаколаў класа link-state гэта шырокавяшчальныя сеткі. Для такога тыпу сеткі суседскія адносіны фарміруюцца паміж усімі маршрутызатарамі, падлучанымі да сеткі.
+
+Усе вылічэнні пратаколаў і пабудовы табліц, у выпадку класічнай мадэлі SDN, вырабляюцца на OpenFlow-кантролеры. У гэтым выпадку, улічваючы, што OpenFlow-камутатары не могуць фармаваць паміж сабой суседскія адносіны, LSDB можа фармавацца на кантролеры, зыходзячы толькі з двух параметраў:
+\begin{enumerate}
+    \item падключаных непасрэдна да маршрутызатараў сеткі;
+    \item Ethernet (шырокавяшчальнага тыпу) пакдлючэнняў.
+\end{enumerate}
+
+Таму у тым выпадку, калі ў сетцы выкарыстоўваюцца падключэнні тыпу NBMA, на Оpenflow-кантролеры будзе немагчыма, у аўтаматычным рэжыме,
+карэктна аднавіць поўную тапалогію сеткі (LSDB), што пацягне за сабой некарэктную маршрутызацыю.
+Напрыклад, у выпадку падключэння маршрутызатараў адзін да аднаго праз сетку тыпу NBMA з выкарыстаннем тапалогіі пункт-мультыпункт, Оpenflow-кантролер адновіць дадзеную тапалогію як падлучэнне «кожны з кожным» праз шырокавяшчальную сетку праз названыя вышэй уласцівасці.
+
+Акрамя таго, паказанай вышэй праблемы, вынікае цэлы шэраг іншых праблем, напрыклад:
+\begin{enumerate}
+    \item некарэктная маршрутызацыя BGP пратакола. Выклікана гэта тым, што ў сваёй рабоце BGP разлічвае на работу пратаколаў IGP (OSPF, IS-IS). Адпаведна, некарэктная маршрутызацыя пратаколаў IGP выкліча некарэктную маршрутызацыю пратакола BGP;
+    \item немагчымасць выкарыстоўваць пратаколы маршрутызацыі multicast трафіку, якія з'яўляюцца дэ-факта стандартам у галінe тэлекамунікацый (PIM-DM, PIM-SM). Справа ў тым, што дадзеныя пратаколы выкарыстоўваюць для RPF-праверак табліцу маршрутызацыі, пабудаваную звычайнымі пратаколамі
+    маршрутызацыі (unicast-трафіка). Ізноў некарэктная работа пратаколаў
+    маршрутызацыі прывядзе да некарэктнай работы пратаколаў PIM-DM, PIM-SM.
+\end{enumerate}
 
 \subsection{Прынцып работы пратакола EIGRP}
 
