--- a/part2.tex
+++ b/part2.tex
@@ -251,7 +251,7 @@ EIGRP выкарыстоўвае 5 тыпаў паведамленняў:
 
 \subsubsection{Разлік метрыкі EIGRP.}
 
-У стандраце, які апісвае работу EIGRP, вызначаны 2 варыянты метрыкі:
+У стандарце, які апісвае работу EIGRP, вызначаны 2 варыянты метрыкі:
 стандартная і пашыраная. Стандартная метрыка, якая будзе выкарыстоўвацца ў дадзеным праекце, разлічваецца маршрутызатарам
 па формуле:
 \begin{equation}
@@ -265,7 +265,7 @@ EIGRP выкарыстоўвае 5 тыпаў паведамленняў:
 \end{Explanation}
 
 Як бачна з формулы, пры разліку метрыкі для канкрэтнага прэфікса
-выкарыстоўваецца параметр Load (нагрузка), максімальнае яго значэнне па ўсіх калах на маршруце да зададзенага прэфікса.
+выкарыстоўваецца параметр Load (нагрузка), максімальнае яго значэнне па ўсіх кірунках на маршруце да зададзенага прэфікса.
 Каэфіцыенты $K_1$, $K_2$, $K_3$, $K_4$, $K_5$ ўяўляюць сабой вагавыя
 каэфіцыенты, якія змяняюцца ад 0 да 255, яны служаць для таго, каб падчас разліку метрыкі
 той ці іншы параметр аказваў большы ці меншы ўплыў на канчатковы
