--- a/part3.tex
+++ b/part3.tex
@@ -4,8 +4,15 @@
 пад кантролем вышэапісаннага алгарытму разліку нагрузкі.
 
 Для сімуляцыі сеткі выкарыстоўваецца GNS3 праграма.
-GNS3 --- гэта графічны сімулятар сеткі, які дазваляе змадэліраваць віртуальную
-сетку з маршрутызатараў і віртуальных машын.
+GNS3 (графічны сеткавай сімулятар) --- серада мадэліравання камп'ютарных сетак, якія выкарыстоўваюць сеткавае абсталяванне, якое функцыянуе на базе працэсаў з архітэктурай MIPS. Да сеткавых устройств адносяцца ўсе сеткавыя камутатары і маршрутызатары. GNS3 з'яўляецца адным з самых папулярных асяроддзяў для вывучэння камп'ютарных сетак і распрацоўкі розных прамысловых рашэнняў. GNS3 таксама ўключае ў сябе:
+\begin{enumerate}
+    \item WinPCAP --- сістэмны драйвер і бібліятэка функцый, якая дазваляе атрымаць доступ да інтэрфейса устройства;
+    \item Wireshark --- графічны аналізатар трафіка сеткі. Дазваляе наглядна атрымліваць падрабязную інфармацыю аб сеткавым трафіку;
+    \item Dynamips --- асяроддзе для распрацоўкі сеткавых устройств, рэалізаваных на базе працэсараў з MIPS-архівам, выкарыстоўваная ў MIPS-архівах;
+    \item VCPS, VirtualBox, QEMU - серада мадэліравання ЭВМ. Выкарыстоўваюцца для эмуляцыі канцавых сеткавых устройвтс альбо прамежкавых устройств, рэалізаваных на базе ЭВМ з архітэктурай IBM/PC;
+    \item SuperPUTTY - сістэма віртуальных тэрміналаў;
+    \item Cpulimit --- сродак абмежавання выкарыстання працэсарнага часу.
+\end{enumerate}
 
 \subsection{Мадэль віртуальнай сеткі}
 
