--- a/part2.tex
+++ b/part2.tex
@@ -485,6 +485,8 @@ Python абумоўлены яго шматплатформеннасцю, а т
 
 На малюнку \ref{uml: Class Diagram} прадстаўлена дыяграма класаў.
 
+\clearpage
+
 \begin{figure}[ht!]
     \centering
     \includegraphics[width=\textwidth]{class_diagram.png}
