--- a/part4.tex
+++ b/part4.tex
@@ -81,7 +81,7 @@
 аднак у дэпартаменце па распрацоўцы праграмнага забеспячэння могуць
 з'явіцца другасныя біялагічныя шкодныя і небяспечныя фактары (напрыклад, пандэмія інфекцыі COVID-19).
 
-\subsection{Арганізацыйныя, тэхналагічныя і іныя рашэнні для
+\subsection{Арганізацыйныя, тэхналагічныя і іншыя рашэнні для
 ўстаранення небяспечных і шкодных фактараў}
 
 Небяспечныя і шкодныя вытворчыя фактары становяцца такімі і прыводзяць да парушэння здароўя спецыялістаў, калі іх велічыні перавышаюць гранічна дапушчальныя велічыні, зацверджаныя ва ўстаноўленым парадку.
