--- a/part1.tex
+++ b/part1.tex
@@ -1,4 +1,4 @@
-\section{Канцэпцыя праграмна-вызначаных сетак і асаблівасць яе рэалізацыі}
+\section{Канцэпцыя праграмна-вызначаных сетак і асаблівасць іх рэалізацыі}
 
 З'яўленне сеткі Інтэрнэт прывяло да стварэння лічбавага грамадства, у якім
 амаль усе прылады злучаны паміж сабой і даступны з любога пункту свету.
