--- a/part2.tex
+++ b/part2.tex
@@ -1,5 +1,5 @@
 % Метод управления трафиком в гибридной программно-определяемой сети
-\section{Аналіз пратаколаў маршрутызацыі і распрацоўка праграмнага забеспячэння для кіравання трафікам ў гібрыдных сетках SDN}
+\section{Параўнальны аналіз пратаколаў маршрутызацыі і распрацоўка праграмнага забеспячэння для кіравання трафікам ў гібрыдных сетках SDN}
 
 \subsection{Тыпы алгарытмаў маршрутызацыі}
 
@@ -548,11 +548,12 @@ Python абумоўлены яго шматплатформеннасцю, а т
     \item \_enable\_eigrp() --- уключае eigrp пратакол.
 \end{enumerate}
 
-У лістынгу \ref{lst: router} прадстаўлены зыходны код Router класа.
+%У лістынгу \ref{lst: router} прадстаўлены зыходны код Router класа.
+У дадатку А прадстаўлены зыходны код класа Router.
 
-\lstinputlisting[caption={Зыходны код Router класа},%
-                            label={lst: router},%
-                            language=Python]{router.py}
+%\lstinputlisting[caption={Зыходны код Router класа},%
+%                            label={lst: router},%
+%                            language=Python]{router.py}
 
 \vspace{-\baselineskip}
 
