--- a/report.tex
+++ b/report.tex
@@ -12,11 +12,11 @@
 
     \include{part3}
 
-    \include{part4}
-
     \include{part5}
 
-    \include{conclusion}
+    \include{part4}
+
+%    \include{conclusion}
 
     \include{literature}
 
