--- a/anatacyja.tex
+++ b/anatacyja.tex
@@ -1,11 +1,49 @@
-\sectionWithoutNumber{АННОТАЦИЯ}
+\sectionWithoutNumber{Анатацыя}
+
+Дадзеная дыпломная праца прысвечана праграмнаму мадэліраванню
+размеркавання патокаў трафіка ў праграмна-вызначаных сетках.
+
+У першым раздзеле разгледжаны азначэнне праграмна-вызначаных сетак,
+архітэктура праграмна-вызначаных сетак, падыходы да рэалізацыі
+канцэпцыі праграмна-вызначаных сетак, пастаўлена задача
+размеркавання патокаў трафіка ў кап'ютарных сетках.
+
+У другім раздзеле выканан параўнальны аналіз пратаколаў маршрутызацыі
+і іх прымяненне ў праграмна-вызначаных сетках, распрацаваны алгарытм
+пераразліку нагрузкі на інтэрфейсах сеткавага ўстройства,
+апісаны механізм кіравання сеткавым устройствам, распрацавана
+праграмнае забеспячэнне для размеркавання патокаў трафіка ў
+залежнасці ад нагрузкі ў праграмна-вызначаных сетках.
+
+У трэцім раздзеле прыведзены прыклад мадэліравання праграмна-вызначанай
+сеткі гібрыднай мадэлі з 3 маршрутызатараў, дадзена параўнанне параметраў
+маршрутызатараў да пачатку перадачы інфармацыі і ў час перадачы інфармацыі
+ў сетцы.
+
+У чацвёртым раздзеле выканан эканамічны разлік распрацоўкі праграмнага
+забеспячэння для кантролера ў праграмна-вызначаных сетках гібрыднай мадэлі.
+
+У пятым раздзеле паказаны правілы і рэкамендацыі для стварэння
+эрганамічных умоў працы.
+
+Аб'ём тлумачальнай запіскі складае --- аркушаў і змяшчае
+--- табліц, --- малюнкаў, --- формул, --- крыніц літаратуры.
+
+\clearpage
+
+%\sectionWithoutNumber{Анатацыя}
+\begin{center}
+\fontsize{14}{14}
+\selectfont
+\textbf{АННОТАЦИЯ}
+\end{center}
 
 Данная дипломная работа посвящена программному моделированию
 распределения потоков трафика в программно-определяемых сетях.
 
 В первом разделе рассмотрены определение программно-определяемых
 сетей, архитектура программно-определяемых сетей, подходы к реализации
-концепции программно-определяемых сетей, поставлена задача распределения
+концепции программно-оп\-ре\-де\-ля\-емых сетей, поставлена задача распределения
 потоков трафика в компьютерных сетях.
 
 Во втором разделе выполнен сравнительный анализ протоколов маршрутизации
