--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,9 +1,40 @@
 \sectionWithoutNumber{Заключэнне}
 
-Асноўнай задачай на час праходжання практыкі было прямыненне ведаў, атрыманыя ў час навучання ў акадэміі, у працоўнай дзейнасці, атрыманне практычнага досведу для рэалізацыі дыпломнага праекта.
+У дадзенай дыпломнай рабоце выконвалася праграмнае мадэліраванне
+патокаў трафіка ў сетках SDN.
 
-У першы дзень наведвання практыкі быў складзены графік працы, у адпаведнасці з якім выконваліся заданні, выдадзеныя кіраўніком практыкі ад арганізацыі, а таксама праведзены інструктаж па тэхніцы бяспекі. Усе дадзеныя заносіліся ў дзённік.
+Для дасягнення пастаўленай мэты
+была разгледжана канцэпцыя праграмна-вызначаных сетак, асноўныя прынцыпы
+яе пабудовы. Таксама быў праведзены аналіз пратаколаў маршрутызацыі,
+якія прымяняюцца ў традыцыйных камп'ютарных сетках, было праведзена
+параўнанне іх прыдатнасці ды выкарыстання ў праграмна-вызначаных сетках
+гібрыднай мадэлі. На базе пратакола маршрутызацыі EIGRP быў распрацаваны
+алгарытм пераразліку тапалогіі сеткі ў залежнасці ад паказальніка нагрузкі
+на інтэрфейсах маршрутызатара. У графічным сеткавым сімулятары GNS3 была
+прадэманстравана праца распрацаванага алгарытму ў камп'ютарнай сеткі з
+3 маршрутызатараў і 1 кантролера.
 
-Падчас практыкі быў праведзены аналіз літаратуру па тэме дыпломнага праектавання. Быў рэалізаваны
-прататып праграмы размеркавання патокаў трафіка ў гібрыдных SDN сетках. Дзеянне дадзенага алгарытма
-быў змадэліваны на невялікай віртуальнай сетцы з 3 маршрутызатараў і 1 кантролера.
+Распрацаваны алгарытм пераразліку тапалогіі сеткі дазваляе адаптаваць
+тапалогію сеткі ў рэальным часе ў залежнасці ад нагрузкі на інтэрфейсах
+сеткавых устройств, што ў сваю чаргу дазваляе не толькі аптымізаваць
+выкарыстанне рэсурсаў сеткавымі ўстройствамі, аданак і палепшыць якасць паслуг,
+якія прадастаўляюцца кліентам, нават у час найбольшай нагрузкі.
+
+У планах далейшага развіцця праграмнага забеспячэння алгарытму
+пераразліку тапалогіі сеткі наступныя крокі:
+\begin{enumerate}
+    \item вынесці ўзровень захавання даных у асобны кампанент (захаванне нагрузкі на інтэрфейсах ажыццяўляць у базе даных), што дазволіць
+    пабудаваць дэцэнтралізавуную інфраструктуру кантролера для павелічэння
+    адмоваўстойлівасці і прадукцыйнасці кантролера;
+    \item рэалізаваць падтрымку атрымання неабходнай інфармацыі з
+    сеткавага ўстройства любога вытворца (напрыклад, Cisco, Huawei, ZTE).
+\end{enumerate}
+
+У тэхнічна-эканамічным раздзеле на аснове сабекошту распрацаванага прадукту
+была падцверджана мэтазгоднасць распрацоўкі дадзенага праграмнага забеспячэння.
+
+З усяго вышэйапісанага можам зрабіць вынік, што мэта дыпломнай працы была
+дасягнута ў поўным аб'ёме (распрацоўка алгарытму пераразліку тапалогіі
+сеткі і праграмнае мадэліраванне яго працы). Атрыманы прататып
+праграмнага забеспячэння выконвае ўсе неабходныя задачы і яго распрацоўка
+і далейшае развіццё з'яўляецца эканамічна мэтазгодным.
