--- a/preface.tex
+++ b/preface.tex
@@ -27,14 +27,14 @@ SDN на аснове пратакола маршрутызацыі EIGRP.
 тапалогіі, пры гэтым дазволіўшы маршрутызатару адаптаваць тапалогію сеткі адносна сеткавых параметраў
 у рэальным часе.
 
-Прадметам даследвання ў дыпломным праекце з'яўляецца размеркаванне патокаў трафіка ў гібрыдных сетках SDN на базе EIGRP пратакола.
+Прадметам даследвання ў дыпломнай працы з'яўляецца размеркаванне патокаў трафіка ў гібрыдных сетках SDN на базе EIGRP пратакола.
 
-МЭта дыпломнга праекта --- праграмна змадэліраваць размеркаванне
+Мэта дыпломай працы --- праграмна змадэліраваць размеркаванне
 патокаў трафіку ў сетках SDN гібрыднай мадэлі на базе распрацаванага алгарытму пераразліку метрыкі
 і тапалогіі на сеткавых устройствах для EIGRP пратакола ў рэальным часе
 ў залежнасці ад нагрузкі на інтэрфейсах устройства.
 
-Актуальнасць тэмы дыпломнага праекта прадыктавана неабходнасцю
+Актуальнасць тэмы дыпломнай працы прадыктавана неабходнасцю
 змянення падыходаў кіравання патокамі трафіка ў інфакамунікацыйных сетках
 у сувязі з пастаянным павелічэннем аб'ёму інфармацыі, якую неабходна
 перадаваць у гэтых сетках.
