--- a/part3.tex
+++ b/part3.tex
@@ -148,7 +148,7 @@ Successor-а пры яго наяўнасці.
                             label={lst: flood ping},%
                             language=bash]{flood_ping.txt}
 
-Як бачна з лістынгу \ref{lst: recalculation} праграма маніторынгу і пераразліку суправаджаецца пастаянным
+Праграма маніторынгу і пераразліку суправаджаецца пастаянным
 запісам логаў: пры знаходжанні інтэрфейса, на якім новае значэнне нагрузкі перавышае ўстаноўлены парог,
 у логі запісваецца, на якім маршрутызатары адбываецца пераразлік метрыкі, калі значэнне нагрузкі менш за парог,
 то ў лог запісваецца старое і новае значэнне нагрузкі на дадзеным інтэрфейсе.
