--- a/anatacyja.tex
+++ b/anatacyja.tex
@@ -26,8 +26,8 @@
 У пятым раздзеле паказаны правілы і рэкамендацыі для стварэння
 эрганамічных умоў працы.
 
-Аб'ём тлумачальнай запіскі складае --- аркушаў і змяшчае
---- табліц, --- малюнкаў, --- формул, --- крыніц літаратуры.
+Аб'ём тлумачальнай запіскі складае -- аркушаў і змяшчае
+-- табліц, -- малюнкаў, -- формул, -- крыніц літаратуры.
 
 \clearpage
 
@@ -61,5 +61,5 @@
 В пятом разделе показаны правила и рекомендации для создания эргономичных
 условий труда.
 
-Объём пояснительной записки составляет --- листов и содержит
---- таблиц, --- рисунком, --- формул, --- источников литературы.
+Объём пояснительной записки составляет -- листов и содержит
+-- таблиц, -- рисунком, -- формул, -- источников литературы.
