--- a/part1.tex
+++ b/part1.tex
@@ -9,7 +9,7 @@
 якія ўжо існуюць, з'яўляюцца вертыкальна інтэграванымі: узровень кіравання сеткай і
 ўзровень патока даных злучаны ў адзін.
 
-Праграмна-вызначаная сетка (SDN) --- гэта канцэпт, які дае надзею на змяненне сітуацыі.
+Праграмна-вызначаная сетка (SDN) -- гэта канцэпт, які дае надзею на змяненне сітуацыі.
 У такой сетцы адмаўляюцца ад вертыкальнай інтэграцыі, выносяць кантрольную логіку
 за межы камутатараў і маршрутызатараў, а таксама ўносяць магчымасць праграмаваць сетку.
 SDN спрашчае працэс стварэння і ўкаранення новых сеткавых абстракцый, пры гэтым
@@ -67,7 +67,7 @@ cеткавую архітэктуру, у якой стан руху трафі
 \begin{enumerate}
     \item узроўні кіравання і даных падзеляныя. Функцыі кіравання выдалены з сеткавых прылад, якія ста
 новятся простымі элементамі маршрутызацыі;
-    \item выкарыстоўваецца маршрутызацыя з улікам уласцівасці патока, а не канчатковага вузла прызначэння. Паток, у шырокім сэнсе --- гэта набор пэўных значэнняў у загалоўку пакета,
+    \item выкарыстоўваецца маршрутызацыя з улікам уласцівасці патока, а не канчатковага вузла прызначэння. Паток, у шырокім сэнсе -- гэта набор пэўных значэнняў у загалоўку пакета,
 які служыць для выбару асобных пакетаў з агульнага трафіку і стварэння для іх адпаведных інструкцый.
 У кантэксце SDN/Openflow, паток - гэта паслядоўнасць пакетаў паміж крыніцай і пунктам прызначэння.
 Усе пакеты аднаго патоку атрымліваюць аднолькавы сeрвіс, адпаведведныя сеткавым палітыкам на прыладах маршрутызацыі.
@@ -95,16 +95,16 @@ cеткавую архітэктуру, у якой стан руху трафі
 сеткавыя прылады, якія прадстаўляюць сабой узровень даных.
 
 Узровень кіравання (Control Plane): сеткавыя прылады праграмуюцца элементамі
-ўзроўня кіравання пры дапамозе Southbound Interface. Узровень кіравання
+ўзроўня кіравання пры дапамозе паўночнага інтэрфейса. Узровень кіравання
 можа лічыцца "мазгамі сеткі", Уся логіка кіравання знаходзіцца ў праграмах і кантролерах,
 якія фарміруюць узровень кіравання.
 
 Узровень менеджменту (Management Plane): гэты ўзровень прадастаўляе сабой
-набор праграм, якія выконваюць функцыі Northbound Interface для забеспячэння
+набор праграм, якія выконваюць функцыі паўночнага інтэрфейса для забеспячэння
 кіравання сеткай. Такія праграмы ўключаюць у сябе маршрутызацыію, фаерволы,
 размеркавальнікі нагрузкі, маніторынг і гэтак далей.
 Праграмы менеджменту вызначаюць палітыкі, якія ў канцы канцоў інтэрпрэтыруюцца
-як інструкцыі для Southbound Interface.
+як інструкцыі для паўднёвага інтэрфейса.
 
 Разгледзім складкіні ўзроўня кіравання.
 
@@ -146,7 +146,7 @@ SDN павінна дазваляць спрасціць сеткавы мене
 З пункту гледжавання архітэктуры кантролеры могуць быць падзелены на цэнтралізаваныя
 і размеркаваныя.
 
-Цэнтралізаваны кантролер --- гэта адзіны аб'ект, які кірае ўсімі сеткавымі прыладамі
+Цэнтралізаваны кантролер -- гэта адзіны аб'ект, які кірае ўсімі сеткавымі прыладамі
 ў сетцы. Канечне, ён прадастаўляе сабой адзіны пункт адмовы і можа мець абмежавання
 па маштабіруемасці. Адзінага кантролера можа быць недастаткова, каб кіраваць
 сеткай з вялікай колькасцю элементаў узроўня даных.
@@ -156,7 +156,7 @@ SDN павінна дазваляць спрасціць сеткавы мене
 уяўляе сабой цэнтралізаваны кластар нод, альбо фізічны размеркавальны набор элементаў.
 у той час як першы варыянт можа павялічыць прапускную здольнасць цэнтраў апрацоўкі даных, другі варыянт можа быць больш устойлівы да лагічных і фізічных збояў.
 
-Адна з уласцівасцяў размеркаваных кантролераў --- гэта адмоваўстойлівасць.
+Адна з уласцівасцяў размеркаваных кантролераў -- гэта адмоваўстойлівасць.
 Пры адмове аднаго вузла, суседні вузел павінен узяць на сябе яго абавязкі.
 
 \subsubsection{Функцыі кантролера.}
@@ -169,20 +169,20 @@ SDN павінна дазваляць спрасціць сеткавы мене
 
 Разгледзем асноўныя інтэрфейсы кантролера:
 \begin{enumerate}
-    \item Southbound APIs можна разглядаць як узровень драйвераў прылады.
+    \item паўночны APIs можна разглядаць як узровень драйвераў прылады.
     Яны прапаноўваюць агульны інтэрфейс верхнім узроўням, у той жа час дазваляючы
     карыстацца рознымі Southbound APIs (напрыклад, OpenFlow). Гэта неабходна для
     адваротнай сумяшчальнасці і гетэрагеннасці, гэта значыць для работы разнастайных
     пратаколаў.
-    \item EastBound and Westbound APIs --- гэта спецыяльныя інтэрфейсы для размеркавання
-    кантролераў. У кожнага кантролера ёсць уласны East/Westbound API. Іх функцыі уключаюць
+    \item усходні і заходні APIs -- гэта спецыяльныя інтэрфейсы для размеркавання
+    кантролераў. У кожнага кантролера ёсць уласны усходні/заходні API. Іх функцыі уключаюць
     імпарт/экспарт даных паміж кантролерамі, алгарытмы звязнасці і магчымасць для
     маніторынга/паведамленняў. Для ўзаемасувязі розных кантролераў неабходна
-    імець стандарныя East/Westbound інтэрфейсы.
+    імець стандарныя усходні/\-заходні інтэрфейсы.
 \end{enumerate}
 
 Можна зрабіць вынік, што платформа кантроля небходна для поспеху SDN. Адна з галоўных
-задача --- магчымасць узаемадзеяння праграмных і апаратных элементаў розных вытворцаў.
+задача -- магчымасць узаемадзеяння праграмных і апаратных элементаў розных вытворцаў.
 
 % ARTICLE_2
 \subsection{Падыходы да рэалізацыі канцэпцыі SDN}
@@ -194,7 +194,7 @@ SDN павінна дазваляць спрасціць сеткавы мене
 \end{enumerate}
 
 \subsubsection{Класічная мадэль.}
-Класічная мадэль гістарычна з'явілася першай і прадугледжвае наяўнасць трох складнікаў: кантролера, камутатара і спецыяльнага пратакола, з дапамогай якога кантролер ўзаемадзейнічае з комутатарам --- OpenFlow.
+Класічная мадэль гістарычна з'явілася першай і прадугледжвае наяўнасць трох складнікаў: кантролера, камутатара і спецыяльнага пратакола, з дапамогай якога кантролер ўзаемадзейнічае з комутатарам -- OpenFlow.
 У тэрмінах дадзенай, класічнай, мадэлі, кантролер і камутатар
 называюцца openflow-кантролерам і openflow-камутатарам.
 Калі на адзін з інтэрфейсаў openflow-камутатара прыходзіць пакет, openflow-
@@ -224,7 +224,7 @@ switch). У выніку openflow-камутатар адпраўляе паке
 \end{enumerate}
 
 \subsubsection{Гібрыдная мадэль.}
-Другі падыход да рэалізацыі канцэпцыі SDN ---
+Другі падыход да рэалізацыі канцэпцыі SDN --
 гібрыдная мадэль.
 Дадзены падыход прадугледжвае менш жорсткае ўзаемадзеянне паміж
 кантролерам, з аднаго боку, і камутатарамі, з другога.
