--- a/part5.tex
+++ b/part5.tex
@@ -48,10 +48,10 @@
     \text{З}_\text{o} = \sum_{i=1}^{n} \text{T}_\text{di} \cdot \text{Ф}_\text{П} \cdot \text{K}_\text{ПР}
 \end{equation}
 \begin{Explanation}
-    \item[дзе] $\text{T}_\text{di}$ --- дзённая тарыфная стаўка $i$-га выканаўца, руб;
-    \item $\text{Ф}_\text{п}$ --- планавы фонд працоўнага часу - час, у перыяд якога
+    \item[дзе] $\text{T}_\text{di}$ -- дзённая тарыфная стаўка $i$-га выканаўца, руб;
+    \item $\text{Ф}_\text{п}$ -- планавы фонд працоўнага часу - час, у перыяд якога
         супрацоўнік $i$-ай катэгорыі прымаў удзел у распрацоўцы, дзён;
-    \item $\text{К}_\text{ПР}$ --- каэфіцыент прэміравання за выкананне планавых
+    \item $\text{К}_\text{ПР}$ -- каэфіцыент прэміравання за выкананне планавых
         паказальнікаў работы, роўны 1,4.
 \end{Explanation}
 
@@ -61,8 +61,8 @@
     \text{T}_\text{дi} = \text{T}_\text{мі} / \text{Ф}_\text{р}
 \end{equation}
 \begin{Explanation}
-    \item[дзе] $\text{T}_\text{мі}$ --- месячная тарыфная стаўка $i$-га выканаўца, руб;
-    \item $\text{Ф}_\text{р}$ --- сярэднемесячны фонд працоўна часу, дні.
+    \item[дзе] $\text{T}_\text{мі}$ -- месячная тарыфная стаўка $i$-га выканаўца, руб;
+    \item $\text{Ф}_\text{р}$ -- сярэднемесячны фонд працоўна часу, дні.
 \end{Explanation}
 
 Разліковая норма працоўнага часу ў днях на 2020 год пры пяцідзённым працоўным тыдні складае 256 дзён. Тады сярэдне месячны фонд працоўнага часу складае прыблізна 21 дзень.
@@ -74,12 +74,12 @@
     \text{T}_\text{M} = \text{T}_\text{М1p} \cdot \text{T}_\text{K}
 \end{equation}
 \begin{Explanation}
-    \item[дзе] $\text{T}_\text{M1p}$ --- дзеючая месячная тарыфная стаўка першага разраду (82 рубелі);
-    \item $\text{T}_\text{K}$ --- тарыфны каэфіцыент (1,21).
+    \item[дзе] $\text{T}_\text{M1p}$ -- дзеючая месячная тарыфная стаўка першага разраду (82 рубелі);
+    \item $\text{T}_\text{K}$ -- тарыфны каэфіцыент (1,21).
 \end{Explanation}
 
 Дадатковая заработная плата персанала ўключае выплаты, якія
-прадугледжаны дзеючым заканадаўствам за непрапрацаваны час ---
+прадугледжаны дзеючым заканадаўствам за непрапрацаваны час --
 водпуск, выплата за выслугу гадоў і да таго падобнае.
 Дадатковая заработная плата вызначаецца па формуле (\ref{eqn: eqn4}):
 
@@ -88,7 +88,7 @@
     \text{З}_\text{Д} = \text{З}_\text{o} \cdot \text{H}_\text{Д} / 100\%
 \end{equation}
 \begin{Explanation}
-    \item[дзе] $\text{H}_\text{Д}$ --- нарматыў дадатковай заработнай платы (10\%).
+    \item[дзе] $\text{H}_\text{Д}$ -- нарматыў дадатковай заработнай платы (10\%).
 \end{Explanation}
 
 Агульныя затраты на аплату працы (ЗАП) вызначаецца па формуле
@@ -154,8 +154,8 @@
     \text{АСП} = \text{ФСАН} + \text{БДС}
 \end{equation}
 \begin{Explanation}
-    \item[дзе] $\text{ФСАН}$ --- адлічэнні ў фонд сацыяльнай абароны насельніцтва, руб;
-    \item $\text{БДС}$ --- адлічэнне ў Белдзяржстрах на страхаванне ад няшчасных выпадкаў і прафейсійных захворванняў, руб.
+    \item[дзе] $\text{ФСАН}$ -- адлічэнні ў фонд сацыяльнай абароны насельніцтва, руб;
+    \item $\text{БДС}$ -- адлічэнне ў Белдзяржстрах на страхаванне ад няшчасных выпадкаў і прафейсійных захворванняў, руб.
 \end{Explanation}
 
 Сума адлічэнняў у фонд сацыяльнай абароны насельніцтва вызначаецца
@@ -168,7 +168,7 @@
     \text{ФСАН} = \frac{\text{ЗАП} \cdot \text{S}_\text{ФСАН}}{100}
 \end{equation}
 \begin{Explanation}
-    \item[дзе] $\text{S}_\text{ФСАН}$ --- стаўка адлічэнняў у фонд сацыяльнай абароны насельніцтва (34\%).
+    \item[дзе] $\text{S}_\text{ФСАН}$ -- стаўка адлічэнняў у фонд сацыяльнай абароны насельніцтва (34\%).
 \end{Explanation}
 
 Адлічэнні ў Белдзяржстрах на страхаванне ад няшчаных выпадкаў і прафесійных захворванняў разлічваецца па формуле (\ref{eqn: eqn8}):
@@ -178,7 +178,7 @@
     \text{БДС} = \frac{\text{ЗАП} \cdot \text{H}_\text{БДС}}{100}
 \end{equation}
 \begin{Explanation}
-    \item[дзе] $\text{H}_\text{БДС}$ --- нарматыў адлічэнняў у Белдзяржстрах, устаноўлены для арганізацыі (0,6\%).
+    \item[дзе] $\text{H}_\text{БДС}$ -- нарматыў адлічэнняў у Белдзяржстрах, устаноўлены для арганізацыі (0,6\%).
 \end{Explanation}
 
 Выдаткі па артыкулу <<Матэрыялы і складнікі вырабу>> (М) вызначаюцца
@@ -196,7 +196,7 @@
     \text{M} = \frac{\text{З}_\text{o} \cdot \text{H}_\text{МЗ}}{100}
 \end{equation}
 \begin{Explanation}
-    \item[дзе] $\text{H}_\text{МЗ}$ --- норма расходу матэрыялаў ад асноўнай заработнай платы (3\%).
+    \item[дзе] $\text{H}_\text{МЗ}$ -- норма расходу матэрыялаў ад асноўнай заработнай платы (3\%).
 \end{Explanation}
 
 Расход па артыкулу <<Навуковыя камандзіроўкі>> вызначаецца па нарматыву расходу на камандзіроўкі ў цэлым на арганізацыю да асноўнай заработнай платы ў працэнтах.
@@ -208,7 +208,7 @@
     \text{P}_\text{НК} = \frac{\text{З}_\text{o} \cdot \text{H}_\text{РНК}}{100}
 \end{equation}
 \begin{Explanation}
-    \item[дзе] $\text{H}_\text{РНК}$ --- нарматыў расходу на камандзіроўкі ў цэлам на арганізацыю (10\%).
+    \item[дзе] $\text{H}_\text{РНК}$ -- нарматыў расходу на камандзіроўкі ў цэлам на арганізацыю (10\%).
 \end{Explanation}
 
 Расход па артыкулу <<Іншыя прамыя выдаткі>> $\text{ІВ}$ на праграмнае забеспячэнне ўключае выдаткі на набыццё і падрыхтоўку спецыяльнай навукова-тэхнічнай інфармацыі і спецыяльнай літаратуры.
@@ -220,7 +220,7 @@
     \text{ІВ} = \frac{\text{З}_\text{o} \cdot \text{H}_\text{ІВ}}{100}
 \end{equation}
 \begin{Explanation}
-    \item[дзе] $\text{H}_\text{ІВ}$ --- нарматыў іншых выдаткаў у цэлым на арганізацыю (20\%).
+    \item[дзе] $\text{H}_\text{ІВ}$ -- нарматыў іншых выдаткаў у цэлым на арганізацыю (20\%).
 \end{Explanation}
 
 Расход па артыкулу <<Накладныя выдаткі>>, звязаныя з неабходнасцю
@@ -234,8 +234,8 @@
     \text{P}_\text{H} = \frac{\text{З}_\text{o} \cdot \text{H}_\text{РН}}{100}
 \end{equation}
 \begin{Explanation}
-    \item[дзе] $\text{Р}_\text{H}$ --- накладныя выдаткі на канкрэтны праграмны прадукт, руб;
-    \item $\text{H}_\text{РН}$ --- нарматыў накладных выдаткаў у цэлым на арганізацыю (10\%).
+    \item[дзе] $\text{Р}_\text{H}$ -- накладныя выдаткі на канкрэтны праграмны прадукт, руб;
+    \item $\text{H}_\text{РН}$ -- нарматыў накладных выдаткаў у цэлым на арганізацыю (10\%).
 \end{Explanation}
 
 Агульная сума выдаткаў ($\text{C}_\text{П}$) па ўсіх артыкулах каштарысу на праграмны прадукт разлічваецца па формуле (\ref{eqn: eqn13}):
@@ -253,8 +253,8 @@
     \text{Ц}_\text{АДП} = \text{C}_\text{П} + \text{П} + \text{ПДК}
 \end{equation}
 \begin{Explanation}
-    \item[дзе] $\text{П}$ --- планавы прыбытак, руб;
-    \item ПДК --- падатак на дадатковы кошт, руб.
+    \item[дзе] $\text{П}$ -- планавы прыбытак, руб;
+    \item ПДК -- падатак на дадатковы кошт, руб.
 \end{Explanation}
 
 Прыбытак (П) неабходна вызначыць з запланаванай нормы рэнтабельнасці.
@@ -266,7 +266,7 @@
     \text{П} = \frac{\text{C}_\text{П} \cdot \text{P}_\text{П}}{100}
 \end{equation}
 \begin{Explanation}
-    \item[дзе] $\text{P}_\text{П}$ --- узровень рэнтабельнасці (15\%).
+    \item[дзе] $\text{P}_\text{П}$ -- узровень рэнтабельнасці (15\%).
 \end{Explanation}
 
 Падатак на дадатковы кошт (ПДК), які ўключаецца ў цану праграмнага прадукту, разлічваецца па формуле (\ref{eqn: eqn16}):
@@ -276,7 +276,7 @@
     \text{НДС} = \frac{\text{C}_\text{П} \cdot \text{S}_\text{ПДК}}{100}
 \end{equation}
 \begin{Explanation}
-    \item[дзе] $\text{S}_\text{ПДК}$ --- стаўка падатку на дадатковы кошт (20\%).
+    \item[дзе] $\text{S}_\text{ПДК}$ -- стаўка падатку на дадатковы кошт (20\%).
 \end{Explanation}
 
 Арганізацыя-распрацоўшчык удзельнічае ў асваенні праграмнага прадукту і нясе адпаведныя выдаткі, на якія складаецца каштарыс, які аплачваецца заказчыкам паводле дагавору. Каштарысам прадугледжваецца не толькі выдаткі, аднак і падаткі, які прадугледжваюцца заканадаўствам, і прыбытак арганізацыі-распрацоўшчыка.
@@ -288,8 +288,8 @@
     \text{P}_\text{а} = \frac{\text{C}_\text{П} \cdot \text{H}_\text{a}}{100}
 \end{equation}
 \begin{Explanation}
-    \item[дзе] $\text{P}_\text{a}$ --- выдаткі на асваенне;
-    \item $\text{H}_\text{a}$ --- нарматыў выдаткаў на асваенне (10\%).
+    \item[дзе] $\text{P}_\text{a}$ -- выдаткі на асваенне;
+    \item $\text{H}_\text{a}$ -- нарматыў выдаткаў на асваенне (10\%).
 \end{Explanation}
 
 Апроч таго, арганізацыя-распрацоўшчык нясе выдаткі на суправаджэнне праграмнага забеспячэння, якое вызначаецца па формуле (\ref{eqn: eqn18}):
@@ -299,8 +299,8 @@
     \text{P}_\text{c} = \frac{\text{C}_\text{П} \cdot \text{H}_\text{c}}{100}
 \end{equation}
 \begin{Explanation}
-    \item[дзе] $\text{P}_\text{с}$ --- выдаткі на суправаджэнне;
-    \item $\text{H}_\text{с}$ --- нарматыў выдаткаў на суправаджэнне (20\%).
+    \item[дзе] $\text{P}_\text{с}$ -- выдаткі на суправаджэнне;
+    \item $\text{H}_\text{с}$ -- нарматыў выдаткаў на суправаджэнне (20\%).
 \end{Explanation}
 
 Агульная сума выдаткаў на распрацоўку ($\text{C}_\text{ПП}$) з выдаткамі на асваенне і суправаджэнне, як поўны сабекошт праграмнага прадукту, вызначаецца па формуле (\ref{eqn: eqn19}):
