--- a/part4.tex
+++ b/part4.tex
@@ -61,9 +61,9 @@
 Дадзены дэпартамент быў абраны, так як распрацоўка праграмнага забеспячэння
 з'яўляецца галоўнай функцыяй арганізацыі, а значыць большая частка супрацоўнікаў належыць да дазенага дэпартамента.
 
-Шкодны вытворчы фактар --- гэта фактар, які можа прывесці да розных захворванняў або пагоршыць ўжо існуючыя захворванні.
+Шкодны вытворчы фактар -- гэта фактар, які можа прывесці да розных захворванняў або пагоршыць ўжо існуючыя захворванні.
 
-Небяспечны вытворчы фактар --- гэта фактар, які можа прывесці да траўмы, у тым ліку смяротнай.
+Небяспечны вытворчы фактар -- гэта фактар, які можа прывесці да траўмы, у тым ліку смяротнай.
 
 Класіфікацыя небяспечных і шкодных вытворчых фактараў па прыродзе ўплыву на здароўе чалавека падрадзяляюцца на:
 \begin{enumerate}
@@ -88,10 +88,10 @@
 
 Згодна з пунктам 8 санітарных норм і правілаў «Гігіенічная класіфікацыя ўмоў працы», зацверджаных пастановай Міністэрства аховы здароўя РБ ад 2012/12/28 № 211, умовы працы дзеляцца на 4 класы:
 \begin{enumerate}
-    \item 1 клас --- аптымальныя ўмовы працы;
-    \item 2 клас --- дапушчальныя ўмовы працы;
-    \item 3 клас --- шкодныя ўмовы працы;
-    \item 4 клас --- небяспечныя ўмовы працы.
+    \item 1 клас -- аптымальныя ўмовы працы;
+    \item 2 клас -- дапушчальныя ўмовы працы;
+    \item 3 клас -- шкодныя ўмовы працы;
+    \item 4 клас -- небяспечныя ўмовы працы.
 \end{enumerate}
 
 У табліцах \ref{table: healthy1} і \ref{table: healthy2} прыведзены гранічна дапушчальныя ўзроўні электрамагнітных палёў ад ВДТ, ЭВМ і перыферыйных прылад у адпаведнасці з гігіенічным нарматывам «Гранічна дапушчальныя ўзроўні нарміруемых параметраў пры працы з відэадысплейнымі тэрміналамі і электронна-вылічальнымі машынамі».
@@ -233,7 +233,7 @@
 
 \subsection{Эрганоміка}
 
-Эрганоміка --- навуковая і практычная дысцыпліна, якая сфармавалася на стыку псіхалогіі, фізіялогіі, гігіены працы, біямеханікі, антрапалогіі і шэрагу тэхнічных навук. Міждысцыплінарнае вывучэнне чалавека ці групы людзей ва ўмовах іх дзейнасці з прымяненнем тэхнічных сродкаў складае сутнасць эрганомікі. як навуковай дысцыпліны. Эрганамічныя даследаванні падпарадкаваны задачам праектавання і арыентаваны на пераўтваральнае-праектнае дзеянне, а не на пазнанне. Асноўны аб'ект даследавання эрганомікі --- сістэма «чалавек-машына». Эрганоміка вывучае пэўныя ўласцівасці гэтай сістэмы, абумоўленыя месцам і роляй чалавека ў ёй, якія атрымалі назву «чалавечага фактару» у тэхніцы. Гэтыя ўласцівасці не зводзяцца да асобных характарыстык чалавека, машыны, прадмета дзейнасці і асяроддзя. Чалавечыя фактары ў тэхніцы ўяўляюць сабой інтэгральныя паказчыкі сувязі чалавека, машыны, прадмета і асяроддзя; яны існуюць «тут і цяпер», канкрэтна выяўляюцца падчас ўзаемадзеяння чалавека і тэхнічнай сістэмы.
+Эрганоміка -- навуковая і практычная дысцыпліна, якая сфармавалася на стыку псіхалогіі, фізіялогіі, гігіены працы, біямеханікі, антрапалогіі і шэрагу тэхнічных навук. Міждысцыплінарнае вывучэнне чалавека ці групы людзей ва ўмовах іх дзейнасці з прымяненнем тэхнічных сродкаў складае сутнасць эрганомікі. як навуковай дысцыпліны. Эрганамічныя даследаванні падпарадкаваны задачам праектавання і арыентаваны на пераўтваральнае-праектнае дзеянне, а не на пазнанне. Асноўны аб'ект даследавання эрганомікі -- сістэма «чалавек-машына». Эрганоміка вывучае пэўныя ўласцівасці гэтай сістэмы, абумоўленыя месцам і роляй чалавека ў ёй, якія атрымалі назву «чалавечага фактару» у тэхніцы. Гэтыя ўласцівасці не зводзяцца да асобных характарыстык чалавека, машыны, прадмета дзейнасці і асяроддзя. Чалавечыя фактары ў тэхніцы ўяўляюць сабой інтэгральныя паказчыкі сувязі чалавека, машыны, прадмета і асяроддзя; яны існуюць «тут і цяпер», канкрэтна выяўляюцца падчас ўзаемадзеяння чалавека і тэхнічнай сістэмы.
 
 Асноўная дзейнасць арганізацыі <<ЭПАМ Сістэмз>> з'яўляецца
 распрацоўка і падтрымка праграмнага забеспячэння, таму большасць супрацоўнікаў
@@ -300,7 +300,7 @@
 
 Пры ўзвядзенні і рэканструкцыі будынкаў з памяшканнямі для ВДТ, ЭВМ і ПЭВМ гэтыя памяшканні варта праектаваць вышынёй ад падлогі да столі не менш за 3,0 м.
 
-Пры размяшчэнні працоўных месцаў з ВДТ, ЭВМ і ПЭВМ адлегласць паміж працоўнымі сталамі з відэаманіторамі (у кірунку тылу паверхні аднаго відэаманітора і экрана іншага відэаманітора) павінна быць не менш за 2,0 м, а адлегласць паміж бакавымі паверхнямі відэаманітораў --- не менш за 1,2 м.
+Пры размяшчэнні працоўных месцаў з ВДТ, ЭВМ і ПЭВМ адлегласць паміж працоўнымі сталамі з відэаманіторамі (у кірунку тылу паверхні аднаго відэаманітора і экрана іншага відэаманітора) павінна быць не менш за 2,0 м, а адлегласць паміж бакавымі паверхнямі відэаманітораў -- не менш за 1,2 м.
 
 Працоўныя месцы з ВДТ, ЭВМ і ПЭВМ пры выкананні творчай працы, якая патрабуе значнага разумовага напружання цi высокай канцэнтрацыі ўвагі, рэкамендуецца ізаляваць адзін ад аднаго перагародкамі вышынёй 1,5--2,0 м.
 
