--- a/preface.tex
+++ b/preface.tex
@@ -29,7 +29,7 @@ SDN на аснове пратакола маршрутызацыі EIGRP.
 
 Прадметам даследвання ў дыпломнай працы з'яўляецца размеркаванне патокаў трафіка ў гібрыдных сетках SDN на базе EIGRP пратакола.
 
-Мэта дыпломай працы --- праграмна змадэліраваць размеркаванне
+Мэта дыпломай працы -- праграмна змадэліраваць размеркаванне
 патокаў трафіку ў сетках SDN гібрыднай мадэлі на базе распрацаванага алгарытму пераразліку метрыкі
 і тапалогіі на сеткавых устройствах для EIGRP пратакола ў рэальным часе
 ў залежнасці ад нагрузкі на інтэрфейсах устройства.
