--- a/literature.tex
+++ b/literature.tex
@@ -6,17 +6,8 @@
     \item Vladyko A., Letenko I., Lezhepekov A., Buinevich M. Fuzzy Model of Dynamic Traffic Man-
 agement in Software-Defined Mobile Networks // Lecture Notes in Computer Science. 2016. Vol. 9870.
 pp. 561–570.
-Нечеткая
-модель
-динамического
-управления
-трафиком
-    \item Летенко И. Д.
-в программируемых сетях // Системы управления и информационные технологии. 2015.
-Т. 62. No 4.1. С. 179–184.
-    \item Красов А. В., Левин М. В., Цветков А. Ю. Управления сетями передачи данных с изме-
-няющейся нагрузкой // Всероссийская научная конференция по проблемам управления в техни-
-ческих системах. Санкт-Петербург, 2015. С. 141–146.
+    \item Летенко И. Д. в программируемых сетях // Системы управления и информационные технологии. 2015. Т. 62. No 4.1. С. 179–184.
+    \item Красов А. В., Левин М. В., Цветков А. Ю. Управления сетями передачи данных с изменяющейся нагрузкой // Всероссийская научная конференция по проблемам управления в технических системах. Санкт-Петербург, 2015. С. 141–146.
     \item Красов А. В., Левин М. В. Возможности управления трафиком в рамках концепции
 SDN // IV Международная научно-техническая и научно-методическая конференция «Актуаль-
 ные проблемы ин
