--- a/anatacyja.tex
+++ b/anatacyja.tex
@@ -1,4 +1,5 @@
-\sectionWithoutNumber{Анатацыя}
+\sectionWithoutContent{Анатацыя}
+\thispagestyle{empty}
 
 Дадзеная дыпломная праца прысвечана праграмнаму мадэліраванню
 размеркавання патокаў трафіка ў праграмна-вызначаных сетках.
@@ -37,6 +38,7 @@
 \selectfont
 \textbf{АННОТАЦИЯ}
 \end{center}
+\thispagestyle{empty}
 
 Данная дипломная работа посвящена программному моделированию
 распределения потоков трафика в программно-определяемых сетях.
