--- a/report.tex
+++ b/report.tex
@@ -3,11 +3,11 @@
 \begin{document}
     \include{anatacyja}
 
-    \include{terms}
-
     \tableofcontents
 
-    \setcounter{page}{2}
+    \include{terms}
+
+    \setcounter{page}{7}
     \include{preface}
 
     \include{part1}
@@ -25,5 +25,19 @@
     \include{literature}
 
     \include{appendixA}
+    \setcounter{page}{65}
+    \include{appendixB}
+    \setcounter{page}{66}
+    \include{appendixC}
+    \setcounter{page}{68}
+    \include{appendixD}
+    \setcounter{page}{69}
+    \include{appendixE}
+    \setcounter{page}{70}
+    \include{appendixF}
+    \setcounter{page}{76}
+    \include{appendixJ}
+    \setcounter{page}{77}
+    \include{appendixG}
 
 \end{document}
