--- a/terms.tex
+++ b/terms.tex
@@ -1,4 +1,6 @@
-\sectionWithoutNumber{Пералік умоўных адзнак, сімвалаў і тэрмінаў}
+\sectionWithoutContent{Пералік умоўных адзнак, сімвалаў і тэрмінаў}
+\thispagestyle{empty}
+
 \noindent
 BGP -- Border Gateway Protocol -- пратакол гранічнага шлюзу \\
 EIGRP -- Enhanced Interior Gateway Routing Protocol -- удасканалены пратакол маршрутызацыі ўнутранага шлюзу\\
